Bug 142698 - EDITING Rejecting TC-deleted image does not clear crossing-out
Summary: EDITING Rejecting TC-deleted image does not clear crossing-out
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2
Keywords: bibisectRequest, implementationError, regression
Depends on:
Blocks: Track-Changes-Image
  Show dependency treegraph
 
Reported: 2021-06-07 07:25 UTC by NISZ LibreOffice Team
Modified: 2021-07-05 07:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (119.09 KB, application/vnd.oasis.opendocument.text)
2021-06-07 07:25 UTC, NISZ LibreOffice Team
Details
The example file with the deleted text+image (175.58 KB, image/png)
2021-06-07 07:25 UTC, NISZ LibreOffice Team
Details
The example file after rejecting the changes (175.29 KB, image/png)
2021-06-07 07:26 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-06-07 07:25:08 UTC
Created attachment 172663 [details]
Example file from Writer

Attached file contains an image that was deleted using change tracking by being anchored to a deleted piece of text.
When all the tracked changes are rejected, the crossing out is not removed from the image.
When an image is deleted by selecting it and pressing Delete, rejecting all changes correctly clears the crossing out.

Steps to reproduce:
    1. Open attached file
    2. Reject all tracked changes

Actual results:
The dog image is still crossed out.

Expected results:
The image should not be crossed out.

LibreOffice details:
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 3b57ebb445df8a2bc3d916ea79f8af45e20e4e62
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-06-07 07:25:48 UTC
Created attachment 172664 [details]
The example file with the deleted text+image
Comment 2 NISZ LibreOffice Team 2021-06-07 07:26:17 UTC
Created attachment 172665 [details]
The example file after rejecting the changes
Comment 3 Dieter 2021-06-22 06:36:47 UTC
I confirm ith with

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: de7356c2e0cb099fac396808b5a86a0393b48e5f
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Doesn't happen with

Version: 7.1.4.1 (x64) / LibreOffice Community
Build ID: f67b1ddedeb24fca1c5938e7cebfab73d708b35b
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: threaded

because image has no crossing after deleting text

Additional information:
LO crashes in 7.3.0.0 if you select image and try to delete it after step 2

Might be related to bug 141994 and bug 59463
Comment 4 Dieter 2021-06-23 10:07:52 UTC
(In reply to Dieter from comment #3)
> Additional information:
> LO crashes in 7.3.0.0 if you select image and try to delete it after step 2

Was only a problem with my user profile.
Comment 5 Commit Notification 2021-06-29 07:33:33 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ad16387653f8e0d310a5eb44bce9fa8df27253c8

tdf#142698 sw: fix reject of deleted images anchored to-char

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2021-06-29 20:49:08 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/001acaa0534d586c12da5d9ba7adfcf01a11fcf8

tdf#142698 sw: fix reject of deleted images anchored to-char

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2021-07-05 07:07:21 UTC
Verified in:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0afa7e64d547a8f2a48402660acf5c95a468a0ab
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded