tdf#142698 sw: fix reject of deleted images anchored to-char

Strikethrough of deleted images wasn't removed by reject
of the tracked deletion, if the image anchored to character
wasn't in same text line as the deleted text.

Follow-up to commit 1610eeef6f2312616fe5d3535475f27f7896bef8
"tdf#142196 sw: crossing out images anchored to character".

Change-Id: I9c7f742942bec90d4c5c65f1bc40a7923353560b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118030
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit ad16387653f8e0d310a5eb44bce9fa8df27253c8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118061
Tested-by: Jenkins
(cherry picked from commit 001acaa0534d586c12da5d9ba7adfcf01a11fcf8)